--- a/index.html
+++ b/index.html
@@ -86,11 +86,10 @@
         </div>
     </section>
     <footer>
-        <div class=".container">
+        <div class="container">
             <p>
                 &copy; Game Galaxy - Todos os direitos reservados - 2024 
             </p>
-
         </div>
     </footer>
 </body>
